# Easy-Level-Projects-

./: README.md  main.py  pyproject.toml
RAG_Research_Agent/: Project Structure  app.py  rag_agent.py  requirements.txt
RAG_Research_Agent/data/vectordb/: chroma.sqlite3
RAG_Research_Agent/utils/: pdf_processor.py  vector_store.py
